deleted unneeded code

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,9 @@
   <body>
     <header class="header">
       <h1>
-        Thousands and thousands of pictures wait for you :) <br />
-        You can will find all of them
+        Thousands of pictures wait for you!
+        <!-- <br />
+        Just search what you want -->
       </h1>
       <form class="search-form" id="search-form">
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
